--- a/input2.cmp
+++ b/input2.cmp
@@ -1,5 +1,13 @@
+def fib(int n) {
+	if (n < 2){
+		return n;
+	}
+	return 32;
+}
+
 def main ( ){
 	int a;
-	a = 1 + 2;
+	b = 1 + 2;
+	a = #fib(3);
 	return 0;
 }
