--- a/input2.cmp
+++ b/input2.cmp
@@ -1,5 +1,6 @@
 def fib ( int n ) {
-	int a;
+	int e;
+	e = 1;
 	if (n <= 2) {
 		return 2;
 	}
@@ -10,12 +11,12 @@ def fib ( int n ) {
 
 def main ( ) {
 	int a, b, c;
-	float b;
-	read(a);
+	float d;
+	string e;
+	read(a, b);
 	while (a < 3) {
-		int a;
 		print(a);
 		a = a * (1 + 3);
 	}
-	return 0 ;
+	return 0;
 }
